# OOP_Lab6

./: Bignum.cpp  Bignum.h  CMakeLists.txt  DivideByZeroException.cpp  DivideByZeroException.h  Exception.cpp  Exception.h  Fraction.cpp  Fraction.h  InputException.cpp  InputException.h  MathException.cpp  MathException.h  Matrix.cpp  Matrix.h  MemoryException.cpp  MemoryException.h  README.md  main.cpp
